Updating script.js with for loops for displaying questions and answer buttons.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                     <div class="modalContent">
                         <div class="modalHeader">
                             
-                            <h2 id="question"> Question Here
+                            <h2 id="questionh2"> Question Here
                             </h2>
                         </div>
-                        <div class="modalBody">
-                            <button class="answerBtn" id="answer1">Answer1</button>
+                        <div id="popUpBody">
+                            <!-- <button class="answerBtn" id="answer1">Answer1</button>
                             <br>
                             <button class="answerBtn" id="answer2">Answer2</button>
                             <br>
                             <button class="answerBtn" id="answer2">Answer3</button>
                             <br>
-                            <button class="answerBtn" id="answer4">Answer4</button>
+                            <button class="answerBtn" id="answer4">Answer4</button> -->
                         </div>
                     </div>
                 </div>
