--- a/index.html
+++ b/index.html
@@ -31,21 +31,17 @@
             </div>
             </column>
             <column="col-sm-12">
+            <!-- fix this and make it more concise -->
                 <div id="modalDiv" class="modal">
                     <div class="modalContent">
                         <div class="modalHeader">
                             
-                            <h2 id="questionh2"> Question Here
+                            <h2 id="questionh2"> 
+                                <!-- Displays question -->
                             </h2>
                         </div>
                         <div id="popUpBody">
-                            <!-- <button class="answerBtn" id="answer1">Answer1</button>
-                            <br>
-                            <button class="answerBtn" id="answer2">Answer2</button>
-                            <br>
-                            <button class="answerBtn" id="answer2">Answer3</button>
-                            <br>
-                            <button class="answerBtn" id="answer4">Answer4</button> -->
+                            <!-- Displays answer buttons -->
                         </div>
                     </div>
                 </div>
@@ -53,8 +49,8 @@
                 <row>
                     <column="col-sm-12">
                     <!-- displays if answers are right or wrong/probably with else/if statement -->
-                    <div class="answerDisplay">
-                        
+                    <div id="answerDisplay">
+                        <p></p>                        
                     </div>
                     </column>
                 </row>
