--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                         <div id="popUpBody">
                             <!-- Displays answer buttons -->
                         </div>
+                        <div id="gameOverDiv">Game Over</div>
                     </div>
                 </div>
                 </column>
@@ -52,6 +53,7 @@
                     <div id="answerDisplay">
                         <p></p>                        
                     </div>
+                    
                     </column>
                 </row>
     </row>
