updating JS. Displaying score, initials input, save button on game end.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div id="popUpBody">
                             <!-- Displays answer buttons -->
                         </div>
-                        <div id="gameOverDiv">Game Over</div>
+                        <div id="gameOverDiv"><p></p></div>
                     </div>
                 </div>
                 </column>
