--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <p></p>
                                 <button id="clearScores">Clear Scores</button>
                                 <button id="backToStart">Back to Start</button>
-                                <ul id="savedHighScores"></ul>
+                                <div id="savedHighScores"><p></p></div>
                             </div>
 
                             </column>
