--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 <div id="highScoreDiv" >
                     <button id="clearScores">Clear Scores</button>
                     <button id="backToStart">Back to Start</button>
-                    <div id="savedHighScores"></div>
+                    <div id="savedHighScores">
+                        <ul id=displayScores"></ul>
+                    </div>
                 </div>
             
             </column>
