--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 
 <body>
-    <row>
-        <column class="col-sm-12">
+    <div class="row">
+        <div class="col-sm-12">
             <div class="header">
                 <button id="highScores">View High Scores</button>
                 <h5 class="timeText">Time:</h5>
                 <h5 class="timer"></h5>
             </div>
-        </column>
-    </row>
-    <row>
-        <column class="col-sm-12">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <div class="quizStart">
                 <h2>Coding Quiz Challenge</h2>
                 <p> Try to answer the following code-related questions within the time limit. Keep in mind that the
@@ -30,8 +30,8 @@
                     answers will penalize your score/time by fifteen seconds!</p>
                 <button class="startButton">Start Quiz</button>
             </div>
-        </column>
-        <column class="col-sm-12">
+        </div>
+        <div class="col-sm-12">
             <div id="modalDiv" class="modal">
                 <div class="modalContent">
                     <div class="modalHeader">
@@ -56,39 +56,39 @@
 
                     </div>
                 </div>
-        </column>
-        <row>
-            <column class="col-sm-12">
-                <!-- displays if answers are right or wrong/probably with else/if statement -->
-                <div id="answerDisplay">
-                    <p></p>
-                </div>
-            </column>
-        </row>
-        <row>
-            <column class="col-sm-12">
-                <div id="highScoreDiv" >
-                    <button id="clearScores">Clear Scores</button>
-                    <button id="backToStart">Back to Start</button>
-                    <div id="savedHighScores">
-                        <ul id=displayScores"></ul>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- displays if answers are right or wrong/probably with else/if statement -->
+                    <div id="answerDisplay">
+                        <p></p>
                     </div>
                 </div>
-            
-            </column>
-        </row>
-    </row>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="questions.js"></script>
-    <script src="script.js"></script>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="highScoreDiv">
+                        <button id="clearScores">Clear Scores</button>
+                        <button id="backToStart">Back to Start</button>
+                        <div id="savedHighScores">
+                            <ul id="displayScores"></ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+        <script src="questions.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
